examples/syntax-error/src/error.js
throw new Error('An error.')